<resources>
    <string name="app_name">FMusic</string>
    <!--nút chuyển màn hình-->
    <string name="bn_music">Music</string>
    <string name="bn_radio">Radio</string>
    <string name="bn_search">Search</string>
    <string name="bn_library">Library</string>
    <string name="btn_login">Login</string>
    <string name="btn_nav_signup">Signup</string>
    <string name="btn_signup">Create account</string>
    <string name="btn_nav_login">Login</string>
    <string name="btn_select_file">Select</string>
    <string name="btn_upfile">Upload radio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For You</string>
    <string name="new_release_from">New release from</string>

    <string name="title_login">Login</string>
    <string name="title_signup">Create account</string>
    <string name="title_radio">Radio</string>
    <string name="title_search">Search</string>
    <string name="title_library">Favourite</string>
    <string name="title_my_radio">My radio</string>
    <string name="title_upfile">Create radio</string>

    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_nameradio">Name radio</string>
    <string name="hint_namefile">Name file</string>
</resources>