<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context=".activity.SignUpActivity">


    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/title_signup"
            android:textSize="@dimen/size_text_large"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etUsernameSignup"
            android:layout_marginTop="@dimen/margin_large_s"
            android:padding="@dimen/padding_default"
            android:hint="@string/hint_username"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_normal"
            android:textColorHint="@color/white"
            android:background="@drawable/round_back_grey_16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"/>
        <EditText
            android:id="@+id/etPassSignup"
            android:layout_marginTop="@dimen/margin_upgrade"
            android:padding="@dimen/padding_default"
            android:hint="@string/hint_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_normal"
            android:background="@drawable/round_back_grey_16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/etFullNameSignup"
            android:layout_marginTop="@dimen/margin_upgrade"
            android:padding="@dimen/padding_default"
            android:hint="@string/hint_name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_normal"
            android:textColorHint="@color/white"
            android:background="@drawable/round_back_grey_16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"/>
        <EditText
            android:id="@+id/etBirthdatSignup"
            android:layout_marginTop="@dimen/margin_upgrade"
            android:padding="@dimen/padding_default"
            android:hint="@string/hint_birthday"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_normal"
            android:textColorHint="@color/white"
            android:background="@drawable/round_back_grey_16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:inputType="datetime"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSignup"
            android:text="@string/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnNavLogin"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/btn_nav_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>