<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context=".activity.UpRadioActivity">


    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/title_upfile"
            android:textSize="@dimen/size_text_large"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etNameRadioUpRadio"
            android:layout_marginTop="@dimen/margin_large_s"
            android:padding="@dimen/padding_default"
            android:hint="@string/hint_nameradio"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_normal"
            android:textColorHint="@color/white"
            android:background="@drawable/round_back_grey_16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_upgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/txtFileNameUpFileScreen"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin_upgrade"
                android:padding="@dimen/padding_default"
                android:hint="@string/hint_namefile"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_normal"
                android:textColorHint="@color/white"
                android:background="@drawable/round_back_grey_16dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"/>
            <Button
                android:id="@+id/btnSelectFileUpRadio"
                android:text="@string/btn_select_file"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnUpRadio"
            android:text="@string/btn_upfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnBackFromUpfileScreen"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>